fix: horizontal scroll bar appears on SiderMenu with light navTheme

--- a/src/components/SiderMenu/index.less
+++ b/src/components/SiderMenu/index.less
@@ -35,8 +35,10 @@
     position: fixed;
     top: 0;
     left: 0;
-    :global(.ant-menu-root) {
+    .baseMenu {
       overflow-y: auto;
+    }
+    :global(.ant-menu-root) {
       height: ~'calc(100vh - @{nav-header-height})';
     }
   }
